[Fix] grid,menu and popup z-index

--- a/src/app/shared/layouts/components/header/theme/header.scss
+++ b/src/app/shared/layouts/components/header/theme/header.scss
@@ -79,7 +79,7 @@
         width: 100%;
         height: 100%;
         bottom: 0;
-        z-index: 1000;
+        z-index: 10000;
         top: 44px;
         left: 0;
         opacity: 0.5;
@@ -96,7 +96,7 @@
     .breadcrumbs{
         top: 54px;
         width: 97.5%;
-        z-index: 1000;
+        z-index: 10000;
         background: #0357a8 !important;
         color: #fff !important;
         height: 32px;
